logs/dag_id=covid_data_dag_postgres_plis/run_id=manual__2023-11-19T112836.055752+0000/task_id=staging.create_cases_deaths_table/attempt=2.log
[2023-11-19T11:31:05.385+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: covid_data_dag_postgres_plis.staging.create_cases_deaths_table manual__2023-11-19T11:28:36.055752+00:00 [queued]>
[2023-11-19T11:31:05.405+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: covid_data_dag_postgres_plis.staging.create_cases_deaths_table manual__2023-11-19T11:28:36.055752+00:00 [queued]>
[2023-11-19T11:31:05.407+0000] {taskinstance.py:1359} INFO - Starting attempt 2 of 2
[2023-11-19T11:31:05.489+0000] {taskinstance.py:1380} INFO - Executing <Task(PostgresOperator): staging.create_cases_deaths_table> on 2023-11-19 11:28:36.055752+00:00
[2023-11-19T11:31:05.509+0000] {standard_task_runner.py:57} INFO - Started process 2359 to run task
[2023-11-19T11:31:05.522+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'covid_data_dag_postgres_plis', 'staging.create_cases_deaths_table', 'manual__2023-11-19T11:28:36.055752+00:00', '--job-id', '1238', '--raw', '--subdir', 'DAGS_FOLDER/Dag_postgres.py', '--cfg-path', '/tmp/tmp87jbkawh']
[2023-11-19T11:31:05.537+0000] {standard_task_runner.py:85} INFO - Job 1238: Subtask staging.create_cases_deaths_table
[2023-11-19T11:31:06.199+0000] {task_command.py:415} INFO - Running <TaskInstance: covid_data_dag_postgres_plis.staging.create_cases_deaths_table manual__2023-11-19T11:28:36.055752+00:00 [running]> on host 172.21.0.3
[2023-11-19T11:31:06.382+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='covid_data_dag_postgres_plis' AIRFLOW_CTX_TASK_ID='staging.create_cases_deaths_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-19T11:28:36.055752+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-19T11:28:36.055752+00:00'
[2023-11-19T11:31:06.389+0000] {sql.py:274} INFO - Executing: DROP TABLE IF EXISTS cases_deaths;
CREATE TABLE IF NOT EXISTS cases_deaths (
    Date_reported DATE,
    Country VARCHAR(255),
    Country_code VARCHAR(255),
    WHO_region VARCHAR(255),
    New_cases INTEGER,
    Cumulative_cases INTEGER,
    New_deaths INTEGER,
    Cumulative_deaths INTEGER,
    Weekly_cases INTEGER,
    Weekly_deaths INTEGER,
    Weekly_pct_growth_cases FLOAT,
    Weekly_pct_growth_deaths FLOAT,
    population INTEGER,
    New_cases_per_million FLOAT,
    New_deaths_per_million FLOAT,
    Cumulative_cases_per_million FLOAT,
    Cumulative_deaths_per_million FLOAT,
    Weekly_cases_per_million FLOAT,
    Weekly_deaths_per_million FLOAT,
);
[2023-11-19T11:31:06.431+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2023-11-19T11:31:06.450+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2023-11-19T11:31:06.471+0000] {sql.py:418} INFO - Running statement: DROP TABLE IF EXISTS cases_deaths;
CREATE TABLE IF NOT EXISTS cases_deaths (
    Date_reported DATE,
    Country VARCHAR(255),
    Country_code VARCHAR(255),
    WHO_region VARCHAR(255),
    New_cases INTEGER,
    Cumulative_cases INTEGER,
    New_deaths INTEGER,
    Cumulative_deaths INTEGER,
    Weekly_cases INTEGER,
    Weekly_deaths INTEGER,
    Weekly_pct_growth_cases FLOAT,
    Weekly_pct_growth_deaths FLOAT,
    population INTEGER,
    New_cases_per_million FLOAT,
    New_deaths_per_million FLOAT,
    Cumulative_cases_per_million FLOAT,
    Cumulative_deaths_per_million FLOAT,
    Weekly_cases_per_million FLOAT,
    Weekly_deaths_per_million FLOAT,
);, parameters: None
[2023-11-19T11:31:06.474+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 22: );
         ^

[2023-11-19T11:31:06.512+0000] {taskinstance.py:1398} INFO - Marking task as FAILED. dag_id=covid_data_dag_postgres_plis, task_id=staging.create_cases_deaths_table, execution_date=20231119T112836, start_date=20231119T113105, end_date=20231119T113106
[2023-11-19T11:31:06.538+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 1238 for task staging.create_cases_deaths_table (syntax error at or near ")"
LINE 22: );
         ^
; 2359)
[2023-11-19T11:31:06.595+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-19T11:31:06.919+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
